Fix issues with code display
Mainly, I added a horizontal scroll for code that is
too long and I also made the font slightly smaller.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -197,26 +197,30 @@ h1+p.date {
   font-style: italic;
 }
 
-/* code formatting.  no monospace because of webkit (bug?) */
+.highlight {
+  overflow-x: auto;
+  border: 1px solid #ddd;
+}
+
 pre,
 code,
 tt {
   font-family: 'BerkeleyMonoRegular';
-  font-size: 1em;
+  font-size: 14px;
 }
 
 pre {
-  line-height: 1.3;
-  border: 1px solid #ddd;
-  padding: 10px;
-  -moz-border-radius-bottomleft: 10px;
-  -webkit-border-bottom-left-radius: 10px;
-  -moz-border-radius-bottomright: 10px;
-  -webkit-border-bottom-right-radius: 10px;
-  -moz-border-radius-topleft: 10px;
-  -webkit-border-top-left-radius: 10px;
-  -moz-border-radius-topright: 10px;
-  -webkit-border-top-right-radius: 10px;
+  line-height: 1.5;
+  padding: 15px;
+}
+
+/* For inline code */
+:not(pre) > code {
+  line-height: inherit; /* Match surrounding text */
+  font-size: 0.9em; /* Slightly smaller than surrounding text */
+  padding: 0.1em 0.3em;
+  border-radius: 3px;
+  background-color: #f0f0f0;
 }
 
 
